# Merchant-Engagement-Decision-Engine-

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  judge_simulator.py  pyproject.toml  railway.json  render.yaml  run_judge.py
dataset/: customers_seed.json  merchants_seed.json  triggers_seed.json
dataset/categories/: dentist.json  gym.json  pharmacy.json  restaurant.json  salon.json
init-db/: 01-extensions.sql
migrations/: env.py
migrations/versions/: 001_initial_schema.py
src/: main.py
src/api/middleware/: error_handling.py  logging.py  metrics.py
src/api/v1/routes/: __init__.py  context.py  health.py  metadata.py  reply.py  tick.py
src/api/v1/schemas/: __init__.py  compose.py  context.py  metadata.py  reply.py  tick.py
src/core/: config.py  constants.py  exceptions.py  logging.py  utils.py
src/domain/models/: __init__.py  conversation.py  customer.py  merchant.py  trigger.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/database/: base.py  session.py
src/rules/: __init__.py  engine.py
src/rules/category_rules/: __init__.py  dentists.py  gyms.py  pharmacies.py  restaurants.py  salons.py
src/services/composer/: __init__.py  decision_engine.py  message_generator.py  signal_ranker.py  suppression_engine.py  template_selector.py
src/services/context_store/: __init__.py  customer_repo.py  merchant_repo.py  trigger_repo.py
src/services/llm/: __init__.py  client.py  structured_output.py
src/services/llm/prompts/: dentists.py  gyms.py  pharmacies.py  restaurants.py  salons.py
src/vera_message_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/workers/: __init__.py  tick_processor.py
tests/: conftest.py  test_api.py  test_decision_engine.py  test_rules.py
